# rag-benchmark-grundprojekt

./: README.md  pyproject.toml
data/: graph_metadata.pkl  vector_metadata.pkl
notebooks/: 01_setup_and_data.ipynb  02_vector_retrieval.ipynb  03_graph_retrieval.ipynb  04_llm_inegration.ipynb  05_evaluation.ipynb  06_summary.ipynb
results/: bleu_by_difficulty.csv  bleu_scores.csv  detailed_answers.json  evaluation_summary.csv  final_metrics.json  graph_retrieval_results.csv  project_report.json  rag_pipeline_results.csv  rouge_by_difficulty.csv  rouge_scores.csv  vector_retrieval_results.csv
