[project]
name = "rag-benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "jupyter>=1.1.1,<2.0.0",
    "pandas>=2.3.1,<3.0.0",
    "numpy>=2.3.2,<3.0.0",
    "openai>=1.99.1,<2.0.0",
    "faiss-cpu>=1.11.0.post1,<2.0.0",
    "langchain>=0.3.27,<0.4.0",
    "langchain-openai>=0.1.0,<1.0.0",
    "langchain-community>=0.2.0,<1.0.0",
    "langchain-core>=0.2.0,<1.0.0",
    "neo4j>=5.28.2,<6.0.0",
    "ipykernel>=6.30.1,<7.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "spacy>=3.7.0,<4.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "nltk>=3.8.0,<4.0.0",
    "rouge-score>=0.1.2,<1.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
